ffi/tests/invalid-handle-code/shared-not-sync.stderr
error[E0277]: `*mut u32` cannot be shared between threads safely
  --> tests/invalid-handle-code/shared-not-sync.rs:15:48
   |
15 |     let h: Handle<SharedNotSync> = Arc::new(s).into();
   |                                                ^^^^ `*mut u32` cannot be shared between threads safely
   |
   = help: within `NotSync`, the trait `Sync` is not implemented for `*mut u32`, which is required by `Arc<NotSync>: Into<_>`
note: required because it appears within the type `NotSync`
  --> tests/invalid-handle-code/shared-not-sync.rs:5:12
   |
5  | pub struct NotSync {
   |            ^^^^^^^
   = note: required for `SharedNotSync` to implement `handle::private::SharedHandleOps<NotSync, True>`
   = note: required for `Handle<SharedNotSync>` to implement `From<Arc<NotSync>>`
   = note: required for `Arc<NotSync>` to implement `Into<Handle<SharedNotSync>>`
